<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_nanodegree_apps"
        android:id="@+id/TextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/button"
        android:layout_below="@+id/TextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:background="#4CAF50"
        android:maxWidth="100dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:textColor="#FFFFFF"
        android:padding="10dp"
        android:singleLine="false" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/super_duo1"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginTop="20dp"
        android:background="#4CAF50"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:padding="10dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/super_duo2"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginTop="20dp"
        android:background="#4CAF50"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:padding="10dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/ant_terminator"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginTop="20dp"
        android:background="#4CAF50"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:padding="10dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/materialize"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginTop="20dp"
        android:background="#4CAF50"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:padding="10dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginTop="20dp"
        android:background="#F44336"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:padding="10dp" />

</RelativeLayout>
